tests/type-errors/invalid_rational_literal_rat.arl
archetype invalid_rational_literal_rat

variable r : rational = 2 / 0.0
